<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_move_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/move_item_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_move_title">

                <TextView
                    android:id="@+id/text_view_set_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sets_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_set_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/text_view_set_title"
                    android:text="@string/sets_text_item"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintEnd_toEndOf="@+id/text_view_set_title"
                    app:layout_constraintStart_toStartOf="@+id/text_view_set_title"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_set_title" />

                <TextView
                    android:id="@+id/text_view_rep_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_set_title"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="32dp"
                    android:text="@string/reps_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/text_view_set_title"
                    app:layout_constraintTop_toTopOf="@+id/text_view_set_title" />

                <TextView
                    android:id="@+id/text_view_rep_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_set_title"
                    android:layout_toEndOf="@id/text_view_rep_title"
                    android:text="@string/reps_text_item"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintEnd_toEndOf="@+id/text_view_rep_title"
                    app:layout_constraintStart_toStartOf="@+id/text_view_rep_title"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_rep_title" />

                <TextView
                    android:id="@+id/text_view_weight_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_rep_title"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="32dp"
                    android:text="@string/weight_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/text_view_rep_title"
                    app:layout_constraintTop_toTopOf="@+id/text_view_rep_title" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/text_view_weight_title"
                    app:layout_constraintStart_toStartOf="@+id/text_view_weight_title"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_weight_title">

                    <TextView
                        android:id="@+id/text_view_weight_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/kg_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/text_view_weight_count"
                        app:layout_constraintStart_toEndOf="@+id/text_view_weight_count" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>